--- a/PC/css/new/search_modi.css
+++ b/PC/css/new/search_modi.css
@@ -66,9 +66,9 @@
 .search_modi .search_filter .search_dp2 > ul li a{font-size:14px; color:#000; font-family: 'font_ns','AppleGothic', sans-serif;}
 .search_modi .search_filter .dp2_tab {position: absolute; top: 24px; left: 66px;}
 .search_modi .search_filter .dp2_tab ul{overflow:hidden;margin:0;}
-.search_modi .search_filter .dp2_tab ul li{float:left;line-height:23px;width: auto;text-align:center;border:0 none;box-sizing:border-box;margin-left: 12px;}
+.search_modi .search_filter .dp2_tab ul li{float:left;position: relative;line-height:23px;width: auto;text-align:center;border:0 none;box-sizing:border-box;margin-left: 12px;}
 .search_modi .search_filter .dp2_tab ul li a{font-size:14px; color:#777; display:block;}
-.search_modi .search_filter .dp2_tab ul li.active{border:0 none;position: relative;}
+.search_modi .search_filter .dp2_tab ul li.active{border:0 none;}
 .search_modi .search_filter .dp2_tab ul li.active a{color:#000;}
 .search_modi .search_filter .dp2_tab ul li:first-child:before {content: '';display: block;width:2px;height:12px;background: #777777; position: absolute;top: 6px;right: -7px;}
 
@@ -77,9 +77,9 @@
 .search_modi .search_filter .price .input_wrap input:-ms-input-placeholder { /* Internet Explorer 10-11 */   color: #777777;}
 .search_modi .search_filter .price .input_wrap input::placeholder {   color: #777777;}
 
-/*.search_modi .search_filter .btn_price_search {width:26px;height:26px;background:url('../../images/new/ico_btn_search.png') no-repeat center;font-size: 0;display: block;float: left;margin-left: 5px;}
+.search_modi .search_filter .btn_price_search {width:26px;height:26px;background:url('../../images/new/ico_btn_search.png') no-repeat center;font-size: 0;display: block;float: left;margin-left: 5px;}
 
-.search_modi .search_filter .btn_wrapper .btn_reset {border:0;font-size: 0;padding:0;width: 26px;height: 24px;background: url('../../images/new/icon_refresh.png') no-repeat center;}
+/*.search_modi .search_filter .btn_wrapper .btn_reset {border:0;font-size: 0;padding:0;width: 26px;height: 24px;background: url('../../images/new/icon_refresh.png') no-repeat center;}
 
 *//* list */
 .search_modi .category_wrap .pd_unit .category_slide ul li {width:230px !important; margin-right: 10px !important; padding:0;}
@@ -124,6 +124,10 @@
 .form_search_list .items .link:after {content:''; display: block; clear: both;}
 .form_search_list .items .link .text_wrap .texts{  line-height: 1.3;}
 .form_search_list .items .link .text_wrap .price{  margin-top:8px;} 
+
+.form_search_list_wrap.fixed {width:640px; left:328px; right: auto;}
+.form_search_list_wrap.fixed .bx-wrapper {max-width: 640px !important;}
+.form_search_list_wrap.fixed .form_search_list {width:582px !important;}
 
 .form_search_list_wrap .form_searh_list_slide {overflow: hidden;}
 .form_search_list_wrap .bx-viewport {height:100% !important;}
