--- a/MOBILE/css/new/orderandpay.css
+++ b/MOBILE/css/new/orderandpay.css
@@ -1034,6 +1034,74 @@
 .orderandpay .box_info { padding:40px 20px;  color:#777; font-size: 12px;}
 .orderandpay .color_03 {color:#777 !important;}
 
+/* 좋아요 */
+.orderandpay .sort_link_wrap {padding: 20px 10px;margin: 0 0px;}
+.orderandpay .sort_link_wrap .sort_link {border: 1px #B5B5B5 solid;padding:12px 20px;font-size:14px;font-weight: 400; margin: 0 5px 10px;border-radius: 34px;}
+.orderandpay .sort_link_wrap .sort_link .num {font-weight: 500;}
+
+/* 좋아요 */
+.orderandpay .at_this_time_like_wrap {}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-container .choice_wrap .choice_like_thing {display: block; position: relative;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-container .choice_wrap .choice_like_thing .thum{width:230px; height:230px; background:#fff; box-sizing:border-box; text-align: center; position: relative;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-container .choice_wrap .choice_like_thing .thum img{width:auto; height:100%;}
+.orderandpay .at_this_time_like_wrap .sold_out .soldout-wrap,
+.orderandpay .at_this_time_like_wrap .sold_out-t .soldout-wrap,
+.orderandpay .at_this_time_like_wrap .sold_out-m .soldout-wrap,
+.orderandpay .at_this_time_like_wrap .sold_out-t-m .soldout-wrap{  display: block;}
+.orderandpay .at_this_time_like_wrap .soldout-wrap{  display: none;  position: absolute;  top: 0;  left: 0;  width: 100%;  height: 100%;  background: rgba(0, 0, 0, 0.6);}
+
+.orderandpay .at_this_time_like_wrap .unit_like_allcheck_wrap {float: left; margin-top:6px;}
+.orderandpay .at_this_time_like_wrap .unit_like_allcheck_wrap .choice_wrap{}
+/*.orderandpay .at_this_time_like_wrap .unit_like_allcheck_wrap .choice_wrap:after {content: ''; display: inline-block; width:1px; height:15px; background:#777; margin: 0px 1px 2px 7px; vertical-align: middle;}*/
+.orderandpay .at_this_time_like_wrap .go_select_wrap {float: right;}
+.orderandpay .at_this_time_like_wrap .choice_delete {font-size: 14px; color: #000; font-weight: 400;font-family: 'font_ns','Apple SD Gothic Neo', sans-serif; vertical-align: baseline; outline: none; width:80px; height:34px; border:1px #313131 solid; display: inline-block; line-height: 32px;}
+.orderandpay .at_this_time_like_wrap .trash_delete {position:absolute;right:0;top: 8px;width:17px;height:19px;background:url('../../images/new/icon_my_trash.png') center no-repeat;font-size: 0;background-size: 17px 19px;padding: 7px;}
+
+/* checkbox */
+.orderandpay .at_this_time_like_wrap .recobell_list {padding-right: 20px;padding-top: 0;border-top: 1px #DBDBDB solid;margin-top: 12px;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-container .choice_wrap{position: relative; overflow: hidden; padding:14px 0;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-container .choice_wrap.type_squre input[type="checkbox"] + label:before,
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-container .choice_wrap.type_squre input[type="radio"] + label:before {margin-right:8px ; position: absolute; top:8px; left:8px; z-index: 1;}
+
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-slide {width:100% !important; display: block !important;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-slide .link {width:100%; display: block;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-slide .thum {width:120px; height:120px; float: left;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-slide .desc {width: calc(100% - 130px);float: left;padding: 0;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-slide .txt {font-size: 14px; font-weight: 400; line-height: 24px;   max-height: 50px; height:auto; margin-top: 0px;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-slide .width70 {width:70%;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-slide .brand {font-size: 11px; color: #777; font-weight: 500; margin-top: 10px;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-slide .price {font-size: 13px;}
+.orderandpay .at_this_time_like_wrap .recobell_list .category .swiper-container {padding-bottom: 0;}
+
+.orderandpay .at_this_time_like_wrap .recobell_list.brand {padding-left:0; padding-right:0;}
+.orderandpay .at_this_time_like_wrap .recobell_list.brand .category .swiper-slide .link {width:auto; padding-left:5px;  padding-right:0px; display: block;}
+.orderandpay .at_this_time_like_wrap .recobell_list.brand .category .swiper-slide .odd .link { padding-right:5px; padding-left: 0}
+.orderandpay .at_this_time_like_wrap .recobell_list.brand .category .swiper-slide .thum {width: 100%;height: 100%;float: none;margin-right: 0;}
+.orderandpay .at_this_time_like_wrap .recobell_list.brand .category .swiper-container .choice_wrap {width: 50%;float: left;}
+.orderandpay .at_this_time_like_wrap .recobell_list.brand .category .swiper-slide .desc {width:auto; float: none; position: relative; padding-right: 30px;}
+.orderandpay .at_this_time_like_wrap .recobell_list.brand .trash_delete {top: -10px; right: 10px;}
+.orderandpay .at_this_time_like_wrap .recobell_list.brand .category .swiper-slide .thum img {width:100%; height: 100%;}
+.orderandpay .at_this_time_like_wrap .recobell_list.brand .category .swiper-slide .brand {font-size: 14px; padding-left:10px;}
+
+.orderandpay .at_this_time_like_wrap .blank_text_wrap {text-align: center; margin: 80px auto; }
+.orderandpay .at_this_time_like_wrap .blank_text_wrap p {font-size: 32px; color: #419BF9;}
+.orderandpay .at_this_time_like_wrap .blank_text_wrap .tt{position: relative;}
+.orderandpay .at_this_time_like_wrap .blank_text_wrap .tt:before{position:absolute; content:''; width:47px; height:47px; left:48px; top:-8px; background:url('../../images/biz/common/icon_none.png')no-repeat;}
+
+/* tab */
+.orderandpay .answer_content_wrap{ border-top:1px #DBDBDB solid; padding:32px 0;}
+.orderandpay .answer_content_wrap .answer_content_title {font-size: 14px;}
+.orderandpay .answer_content_wrap .answer_content_txt {line-height: 1.8; margin-top:14px;}
+.orderandpay .question-content {padding-bottom: 32px;}
+.orderandpay .tab_unit_list:after {content: ''; display: block; clear: both;}
+.orderandpay .tab_unit_list .items {margin-right:10px; float: left; overflow: hidden;}
+.orderandpay .tab_unit_list .items:before {content: ''; display: block; width:1px; height:15px; background: #777; float: left; margin-right:10px;}
+.orderandpay .tab_unit_list .items:first-child:before {content: ''; display: none;}
+.orderandpay .tab_unit_list .items .link {color: #777;}
+.orderandpay .tab_unit_list .items .link.active {color: #000;}
+
+
+
 
 @media screen and (max-width: 360px) {
 
