--- a/MOBILE/css/new/orderandpay.css
+++ b/MOBILE/css/new/orderandpay.css
@@ -495,6 +495,24 @@
 .orderandpay .color_01 {color:#DA2128 !important;}
 .orderandpay .color_02 {color:#419BF9 !important;}
 .orderandpay .space_pad {padding-right:20px !important; padding-left:20px !important;}
+.orderandpay .t_center {text-align: center !important;}
+
+.orderandpay table.tabab { width : 100%; border :0 none; }
+.orderandpay table.tabab tbody {border-top : 3px solid black;}
+.orderandpay table.tabab th.t_right{background-color: #fff; text-align:left; padding : 10px; height : 44px; border:0 none;}
+.orderandpay table.tabab td {padding : 0 10px; border:0 none;}
+.orderandpay table.tabab td input{border:none;border-right:0px; border-top:0px; border-left:0px; border-bottom:0px;}
+.orderandpay table.tabab td span.f_left {display: block;}
+.orderandpay table.tabab td span.f_left input {display : inline-block; width: 100%;height: 44px;border: 1px solid #B5B5B5;border-radius: 0px;}
+/*a.btn_type01 { display: block; width: 100%; height: auto; margin-top: 10px; padding: 10px 0 10px 0; background-color: #ff6600; text-align: center; border-radius: 5px;}
+a.btn_type01.hid_obj { display:none; }
+a.btn_type01 span{ color : white; font-weight :bold;  font-size : 1.2em;}
+a.btn_type02 { display: block; width: 100%; height: auto; margin-top: 10px; padding: 10px 0 10px 0; border:1px solid #ff6600; text-align: center; border-radius: 5px;}
+a.btn_type02.hid_obj { display:none; }
+a.btn_type02 span{ color : #ff6600; font-weight :bold;  font-size : 1.2em;}
+div.bill_noti img{width : 100%; margin-bottom: 20px;}
+div.bill_noti div{margin-bottom:5px;}
+*/
 
 
 /* 쿠폰 리스트 , 주문서 사용 */
@@ -616,7 +634,7 @@
 
 /* 고객센터 paging */
 .orderandpay .paging {margin-top:36px;}
-.orderandpay .paging > a {display:inline-block;width:24px;height:24px;overflow:hidden;line-height:99px;}
+.orderandpay .paging > a {display:inline-block;width:24px;height:24px;overflow:hidden;line-height:99px; font-size: 0;}
 .orderandpay .paging .prev {margin-right:7px;background:url(../../images/new/cs_icon_prev_off.png) no-repeat center center;background-size:10px 17px;}
 .orderandpay .paging .next {margin-left:7px;background:url(../../images/new/cs_icon_next_on.png) no-repeat center center;background-size:10px 17px;}
 .orderandpay .paging ul {display:inline;}
@@ -683,9 +701,15 @@
 .orderandpay .cs_direct #layer .sub_contents .inner_padding .table02 .choice_wrap .unit_text_wrap .unit_status {font-size: 13px; font-weight: 700;  overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
 .orderandpay .cs_direct #layer .sub_contents .inner_padding .border-bottom {border-bottom: 1px #707070 solid;padding-bottom: 7px;padding-top: 30px;}
 
-
-
-
+.orderandpay .my .w_top.tit_h2 {font-size: 16px; border:0; padding:10px 20px;}
+.orderandpay .text1.info_txt {font-size: 13px; color:#313131; margin:0; padding-top:0; padding-bottom: 0;}
+.orderandpay .order_number_check {background: #fafafa; padding: 16px 20px; text-align: center;}
+.orderandpay .order_number_check .tit_type1 {color: #000;}
+.orderandpay .order_inquiry .order_num {margin:0; background: #fff; font-size:14px ; padding:10px 0;}
+.orderandpay .order_inquiry .br_list li {border-top:1px #DBDBDB solid; padding:20px 0; font-size: 14px;}
+.orderandpay .order_inquiry .br_list .fl_l {color:#000;}
+.orderandpay .order_inquiry .br_list li .fl_r {color: #000; font-weight: 400;}
+.orderandpay .order_inquiry {position: relative;}
 
 
 
@@ -1034,6 +1058,8 @@
 .orderandpay .box_info { padding:40px 20px;  color:#777; font-size: 12px;}
 .orderandpay .color_03 {color:#777 !important;}
 
+.orderandpay .tog_area .select {background-color:#F8F8F8; border:1px #777777 solid; font-size: 12px;}
+.orderandpay #my_content .my_list {margin:0;}
 
 @media screen and (max-width: 360px) {
 
